--- a/templates/dashboard_base.html
+++ b/templates/dashboard_base.html
@@ -18,10 +18,6 @@
                 <div class="dashboard-icon-text">Collection</div>
             </a>
             <a class="mdl-navigation__link" href="">
-                <i class="material-icons">compare_arrows</i>
-                <div class="dashboard-icon-text">Loan</div>
-            </a>
-            <a class="mdl-navigation__link" href="">
                 <i class="material-icons">bar_chart</i>
                 <div class="dashboard-icon-text">Report</div>
             </a>
@@ -48,4 +44,20 @@
 {% endblock dashboard %}
 
 {% block content %}
+    <div class="row">
+        <div class="col-md-4 offset-md-4">
+            <div class="card text-center">
+                <div class="card-header">
+                    Yea
+                    <h5 class="card-title">Choose Video</h5>
+                </div>
+                <div class="card-body">
+
+                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
 {% endblock content %}
