--- a/Dashboard/templates/html/video_chooser.html
+++ b/Dashboard/templates/html/video_chooser.html
@@ -9,6 +9,10 @@
                 </div>
                 <div class="card-body">
 
+                    <video width="320" height="240" controls>
+                        <source src="../../videos/videoplayback.mp4" type="video/mp4">
+                    </video>
+
                     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
                     <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
