--- a/templates/base.html
+++ b/templates/base.html
@@ -124,10 +124,7 @@
             <span class="mdl-layout-title"><strong>Traffic Rules Violation Detection</strong></span>
             <div class="mdl-layout-spacer"></div>
             <nav class="mdl-navigation navbar-navigation">
-                <a class="mdl-navigation__link" href="">Link</a>
-                <a class="mdl-navigation__link" href="">Link</a>
-                <a class="mdl-navigation__link" href="">Link</a>
-                <a class="mdl-navigation__link" href="">Link</a>
+                <a class="mdl-navigation__link" href="">Login</a>
             </nav>
         </div>
     </header>
