--- a/templates/dashboard_base.html
+++ b/templates/dashboard_base.html
@@ -5,7 +5,7 @@
 
         <span class="mdl-layout-title"><span class="sidebar-title">TVD</span></span>
         <nav class="mdl-navigation custom-style">
-            <a class="mdl-navigation__link" href="">
+            <a class="mdl-navigation__link" href="/home">
                 <i class="material-icons">dashboard</i>
                 <div class="dashboard-icon-text">Dashboard</div>
             </a>
