--- a/Dashboard/templates/html/video_chooser.html
+++ b/Dashboard/templates/html/video_chooser.html
@@ -16,7 +16,7 @@
                     <form action="{% url 'detection:homepage' %}" method="post">
                         <div class="row">
                             <div class="col-md-4">
-                                <input type="radio" name="group1" id="r1" value="1"/>
+                                <input type="radio" name="video_id" id="r1" value="1"/>
                                 <label for="r1">
                                     <video width="100%" controls="controls">
                                         <source src="/1.mp4" type="video/mp4">
@@ -24,7 +24,7 @@
                                 </label>
                             </div>
                             <div class="col-md-4">
-                                <input type="radio" name="group1" id="r1" value="1"/>
+                                <input type="radio" name="video_id" id="r1" value="1"/>
                                 <label for="r1">
                                     <video width="100%" controls>
                                         <source src="/1.mp4" type="video/mp4">
@@ -32,7 +32,7 @@
                                 </label>
                             </div>
                             <div class="col-md-4">
-                                <input type="radio" name="group1" id="r1" value="1"/>
+                                <input type="radio" name="video_id" id="r1" value="1"/>
                                 <label for="r1">
                                     <video width="100%" controls>
                                         <source src="/1.mp4" type="video/mp4">
