--- a/Dashboard/templates/html/violation_chooser.html
+++ b/Dashboard/templates/html/violation_chooser.html
@@ -13,6 +13,10 @@
                     <h3 class="card-title">Select Violation</h3>
                 </div>
                 <div class="card-body">
+                    {% for i in violation_objs %}
+                        <input type="radio" name="violation" value="{{ i.pk }}" id="violation_{{ id.pk }}">
+                        <label for="violation_{{ id.pk }}">{{ i.name }}</label>
+                    {% endfor %}
 
 
                     {#                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>#}
