--- a/templates/new_base.html
+++ b/templates/new_base.html
@@ -85,22 +85,26 @@
             font-size: 1em;
             display: block;
             color: black;
+            text-decoration: none;
         }
 
         #sidebar ul li a:hover {
             color: #000000;
-            background: #fff;
+            background: #dedede;
+            text-decoration: none;
         }
 
         #sidebar ul li.active > a, a[aria-expanded="true"] {
             color: #000000;
             background: #d6d6d6;
+            text-decoration: none;
         }
 
         ul ul a {
             font-size: 0.9em !important;
             padding-left: 10% !important;
             background: #c1c1c1;
+            text-decoration: none;
         }
 
         {% block style %}
@@ -110,6 +114,7 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
             integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
             crossorigin="anonymous"></script>
